<resources>
    <string name="app_name">Mafia Master</string>
    <string name="start_game">Розпочати гру</string>
    <string name="settings">Налаштування</string>
    <string name="rules">Правила</string>
    <string name="icon">Іконка</string>
    <string name="show">Показати</string>
    <string name="day">День</string>
    <string name="night">Ніч</string>
    <string name="player">Гравець %1$d</string>
    <string name="mafia_kills">Мафія вбиває</string>
    <string name="mistress_pays_a_visit">Путана відвідує</string>
    <string name="doctor_heals">Доктор лікує</string>
    <string name="this_player_is_visited_by_mistress">До цього гравця завітала путана</string>
    <string name="sheriff_checks">Комісар перевіряє</string>
    <string name="voting">Голосування</string>
    <string name="maniac_kills">Маньяк вбиває</string>
    <string name="talk">Балаган</string>
    <string name="last_words">Останні слова</string>
    <string name="players_role_was">Роль цього гравця була</string>
    <string name="speech_of_player">Промова гравця %1$d</string>
    <string name="mafia">Мафія</string>
    <string name="don_mafia">Дон Мафії</string>
    <string name="mistress">Путана</string>
    <string name="doctor">Доктор</string>
    <string name="civilian">Мирний житель</string>
    <string name="sheriff">Комісар</string>
    <string name="maniac">Маньяк</string>
    <string name="today_victims_are">Сьогоднішні жертви</string>
    <string name="player_and_player">Гравець %1$d та гравець %2$d</string>
    <string name="role_and_role">%1$s та %2$s</string>
    <string name="everybody_is_alive">Всі живі!</string>
    <string name="start_the_night">Розпочати ніч</string>
    <string name="skip_the_player">Пропустити гравця</string>
    <string name="start_the_talk">Розпочати Балаган</string>
    <string name="confirm">Підтвердити</string>
    <string name="get_extra_vote">Отримати додатковий голос</string>
    <string name="skip_speech">Пропустити промову</string>
    <string name="setting_the_roles">Налаштування ролей</string>
    <string name="players">Гравці</string>
    <string name="don">Дон</string>
    <string name="rules_explanation">\t У грі 12 гравців з двох команд. \n\tВ команді мафії 4 гравці (Дон, 2 мафii, путана), вони знають одне одного. \n\t В команді мирних 8 гравців (5 жителів, лікар, маньяк, комісар), вони не знайомі між собою.\n\t Задача мафii - обманювати, плутати та «вбивати» мирних, задача мирних - з\'ясувати, хто обманює і вигнати їх з міста на голосуванні.</string>
    <string name="game_is_split_on_two_parts">Гра ділиться на двi фази</string>
    <string name="game_is_split_on_two_parts_explanation">\t Нiч - всi \"сплять\" (заплющують очі або вдягають маски), по командi ведучого прокидаються певні ролі і виконують свою дію.\n\t День - всi прокидаються, ведучий оголошує, що сталось вночі, після чого в мiстi починається обговорення (балаган), гравці говорять по черзі (промови) і голосують в найбільш пiдозрілих - в тих, кого вважають мафією (голосування).</string>
    <string name="don_mafia_explanation">\t Головний серед чорних. Вирішує, кого саме вбивати вночі (показує рукою на гравця або його номер) .</string>
    <string name="mafia_explanation">\t Допомагають Дону вирішувати, кого вбивати . Якщо Дон помер, вирішує мафiя з меншим номером</string>
    <string name="mistress_explanation">\t Вночi показує на того, кого вважає активом (лікарем , маньяком , комісаром). Якщо потрапляє у справжнього актива, то блокує його дію в цю ніч. Може вибирати одного й того ж гравця не більше двох ночей підряд. Коли залишається одна в грi, вбиває і блокує дії.</string>
    <string name="remark_about_mistress">Для всіх активів (лікар, маньяк, комісар)</string>
    <string name="remark_about_mistress_explanation">\t Якщо ведучий вам по казує мізинець - ваша дія заблокована путаною.</string>
    <string name="civilians_team">Команда мирних</string>
    <string name="civilians_team_explanation">\t Задача мирних - знайти всю мафію і прибрати їх на голосуванні або вбити маньяком.</string>
    <string name="doctor_explanation">\t Прокидається вночi i лiкує одного з гравцiв, включно з собою, від вбивства і активного гравця вiд блоку путани. Лікує одного й того ж гравця не більше 1 разу підряд. Себе може лікувати лише 1 раз за гру.</string>
    <string name="maniac_explanation">\t Прокидається вночі і може вбити будь - якого гравця. кого вважає чорним. Маньяку краще не стріляти, якщо він не впевнений, так як він може вбити мирного гравця.</string>
    <string name="sheriff_explanation">\t Дізнається колір ( червоний чи чорний ) будь - якого гравця за столом щоночі. Якщо знайшов чорного, краще одразу сказати про це всім.</string>
    <string name="civilians_explanation">\t Пасивна роль, яка не прокидається вночі. Допомагає місту прибирати ма фію вдень на голосуванні.</string>
    <string name="players_roles">Ролі гравців</string>
    <string name="edit_fouls_of_players">Редагування фолів</string>
    <string name="your_role_is">Ваша роль</string>
    <string name="next_player">Наступний гравець</string>
    <string name="end_voting">Закінчити голосування</string>
    <string name="end_the_night_of_getting_acquaintances">Закінчити ніч знайомств</string>
    <string name="black_players_get_acquaintances">Чорні гравці знайомляться</string>
    <string name="choose">Обрати</string>
    <string name="checked_player_is">Перевірений гравець є</string>
    <string name="black_player">Чорний гравець</string>
    <string name="red_player">Червоний гравець</string>
    <string name="end_the_night">Закінчити ніч</string>
</resources>