<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".activities.MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/circle_for_icons"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/circularIconForegroundSize"
            android:layout_height="@dimen/circularIconForegroundSize"
            android:contentDescription="@string/icon"
            android:foreground="@drawable/ic_mafia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:background="@drawable/rectangular_rounded_shape"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="2dp"
        android:text="@string/start_game"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/buttonTextSize"
        android:layout_marginTop="175dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
         />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:background="@drawable/rectangular_rounded_shape"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="2dp"
        android:text="@string/settings"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/buttonTextSize"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="@id/buttonStartGame" />

    <Button
        android:id="@+id/buttonRules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:background="@drawable/rectangular_rounded_shape"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="2dp"
        android:text="@string/rules"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/buttonTextSize"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="@id/buttonSettings" />


</androidx.constraintlayout.widget.ConstraintLayout>